Added NutritientInfo functionality and Modified Substitution UI