@@ -1,7 +1,8 @@
+
 package UI;
 
-import models.UserProfile;
 import models.NutrientInfo;
+import models.UserProfile;
 import services.Substitution;
 import models.SubstitutionRecord;
 import utility.ConnectionProvider;
@@ -9,7 +10,10 @@ import utility.ConnectionProvider;
 import javax.swing.*;
 import javax.swing.table.DefaultTableModel;
 import java.awt.*;
+import java.awt.event.KeyAdapter;
+import java.awt.event.KeyEvent;
 import java.sql.*;
+import java.sql.Date;
 import java.util.*;
 import java.util.List;
 import java.time.LocalDate;
@@ -79,228 +83,209 @@ public class SubstitutionUI extends JFrame {
 
     private void showSubstitutionDialog() {
         JDialog dialog = new JDialog(this, "Log a Substitution", true);
-        dialog.setLayout(new GridLayout(8, 2, 10, 10));
-        dialog.setSize(600, 400);
+        dialog.setSize(520, 400);
         dialog.setLocationRelativeTo(this);
 
-        // Original and substitute combos
-        JComboBox<String> originalCombo = new JComboBox<>(originalMealOptions.toArray(new String[0]));
-        JComboBox<String> substituteCombo = new JComboBox<>(Substitution.getAllFoodNames().toArray(new String[0]));
+        JPanel panel = new JPanel(new GridBagLayout());
+        panel.setBorder(BorderFactory.createEmptyBorder(20, 20, 20, 20));
+        panel.setBackground(Color.WHITE);
 
-        // Date range selection
+        GridBagConstraints gbc = new GridBagConstraints();
+        gbc.insets = new Insets(8, 8, 8, 8);
+        gbc.fill = GridBagConstraints.HORIZONTAL;
+        gbc.gridx = 0;
+        gbc.gridy = 0;
+
+        JLabel lblOrig = new JLabel("Original Food:");
+        JComboBox<String> originalCombo = new JComboBox<>(originalMealOptions.toArray(new String[0]));
+
+        JLabel lblSub = new JLabel("Substitute Food:");
+        List<String> allFoods = Substitution.getAllFoodNames();
+        JComboBox<String> substituteCombo = new JComboBox<>(allFoods.toArray(new String[0]));
+        substituteCombo.setEditable(true);
+
+        JTextField editor = (JTextField) substituteCombo.getEditor().getEditorComponent();
+        editor.addKeyListener(new KeyAdapter() {
+            @Override
+            public void keyReleased(KeyEvent e) {
+                String input = editor.getText().toLowerCase();
+                List<String> filtered = allFoods.stream()
+                        .filter(name -> name.toLowerCase().contains(input))
+                        .collect(Collectors.toList());
+                substituteCombo.setModel(new DefaultComboBoxModel<>(filtered.toArray(new String[0])));
+                substituteCombo.setSelectedItem(input);
+                substituteCombo.showPopup();
+            }
+        });
+
+        JLabel lblRange = new JLabel("Date Range:");
         String[] rangeOptions = {"Past 7 Days", "Past 15 Days", "Past 30 Days", "Custom Range"};
         JComboBox<String> rangeCombo = new JComboBox<>(rangeOptions);
 
-        // Date fields
-        JTextField startDateField = new JTextField();
+        JLabel lblStart = new JLabel("Start Date (YYYY-MM-DD):");
+        JTextField startDateField = new JTextField(LocalDate.now().minusDays(7).toString());
+
+        JLabel lblEnd = new JLabel("End Date (YYYY-MM-DD):");
         JTextField endDateField = new JTextField(LocalDate.now().toString());
 
-        // Default to 7 days ago
-        startDateField.setText(LocalDate.now().minusDays(7).toString());
         startDateField.setEnabled(false);
         endDateField.setEnabled(false);
 
-        // Toggle based on range selection
         rangeCombo.addActionListener(e -> {
             String selected = (String) rangeCombo.getSelectedItem();
             LocalDate today = LocalDate.now();
-
             switch (selected) {
-                case "Past 7 Days":
+                case "Past 7 Days" -> {
                     startDateField.setText(today.minusDays(7).toString());
                     endDateField.setText(today.toString());
-                    break;
-                case "Past 15 Days":
+                }
+                case "Past 15 Days" -> {
                     startDateField.setText(today.minusDays(15).toString());
                     endDateField.setText(today.toString());
-                    break;
-                case "Past 30 Days":
+                }
+                case "Past 30 Days" -> {
                     startDateField.setText(today.minusDays(30).toString());
                     endDateField.setText(today.toString());
-                    break;
-                case "Custom Range":
-                    // Leave fields editable; no change to values
-                    break;
+                }
             }
-
-            boolean isCustom = "Custom Range".equals(selected);
-            startDateField.setEnabled(isCustom);
-            endDateField.setEnabled(isCustom);
+            boolean custom = selected.equals("Custom Range");
+            startDateField.setEnabled(custom);
+            endDateField.setEnabled(custom);
         });
 
-        // Add components to dialog
-        dialog.add(new JLabel("Original Food:"));
-        dialog.add(originalCombo);
-        dialog.add(new JLabel("Substitute Food:"));
-        dialog.add(substituteCombo);
-        dialog.add(new JLabel("Date Range:"));
-        dialog.add(rangeCombo);
-        dialog.add(new JLabel("Start Date (YYYY-MM-DD):"));
-        dialog.add(startDateField);
-        dialog.add(new JLabel("End Date (YYYY-MM-DD):"));
-        dialog.add(endDateField);
+        // Add components to panel
+        panel.add(lblOrig, gbc); gbc.gridx = 1; panel.add(originalCombo, gbc);
+        gbc.gridx = 0; gbc.gridy++; panel.add(lblSub, gbc); gbc.gridx = 1; panel.add(substituteCombo, gbc);
+        gbc.gridx = 0; gbc.gridy++; panel.add(lblRange, gbc); gbc.gridx = 1; panel.add(rangeCombo, gbc);
+        gbc.gridx = 0; gbc.gridy++; panel.add(lblStart, gbc); gbc.gridx = 1; panel.add(startDateField, gbc);
+        gbc.gridx = 0; gbc.gridy++; panel.add(lblEnd, gbc); gbc.gridx = 1; panel.add(endDateField, gbc);
 
-        // Apply button
-        JButton btnLog = new JButton("Apply Substitution");
-        btnLog.addActionListener(e -> {
+        // Apply Button
+        JButton btnApply = new JButton("Apply Substitution");
+        btnApply.setBackground(new Color(85, 170, 85));
+        btnApply.setForeground(Color.WHITE);
+        btnApply.setFont(new Font("Arial", Font.BOLD, 13));
+
+        btnApply.addActionListener(e -> {
             String orig = (String) originalCombo.getSelectedItem();
             String sub = (String) substituteCombo.getSelectedItem();
             String startStr = startDateField.getText().trim();
             String endStr = endDateField.getText().trim();
 
-            if (orig == null || sub == null) {
-                JOptionPane.showMessageDialog(dialog, "Please select both original and substitute foods.", "Error", JOptionPane.ERROR_MESSAGE);
-                return;
-            }
-
-            if (orig.equals(sub)) {
-                JOptionPane.showMessageDialog(dialog, "Original and substitute food cannot be the same.", "Error", JOptionPane.ERROR_MESSAGE);
+            if (orig == null || sub == null || orig.equals(sub)) {
+                JOptionPane.showMessageDialog(dialog, "Please select different original and substitute foods.", "Error", JOptionPane.ERROR_MESSAGE);
                 return;
             }
 
             try {
-                LocalDate startLocalDate = LocalDate.parse(startStr);
-                LocalDate endLocalDate = LocalDate.parse(endStr);
-
-                if (startLocalDate.isAfter(endLocalDate)) {
+                LocalDate start = LocalDate.parse(startStr);
+                LocalDate end = LocalDate.parse(endStr);
+                if (start.isAfter(end)) {
                     JOptionPane.showMessageDialog(dialog, "Start date must be before or equal to end date.", "Error", JOptionPane.ERROR_MESSAGE);
                     return;
                 }
-
-                java.sql.Date startDate = java.sql.Date.valueOf(startLocalDate);
-                java.sql.Date endDate = java.sql.Date.valueOf(endLocalDate);
-
                 int origId = Substitution.getFoodIdByName(orig);
                 int subId = Substitution.getFoodIdByName(sub);
-
-                new Substitution().applySubstitutionToMeals(user.getUserId(), origId, subId, startDate, endDate);
-                JOptionPane.showMessageDialog(dialog, "Substitution applied to meals from " + startStr + " to " + endStr + ".");
+                new Substitution().applySubstitutionToMeals(user.getUserId(), origId, subId, Date.valueOf(start), Date.valueOf(end));
+                JOptionPane.showMessageDialog(dialog, "Substitution applied from " + startStr + " to " + endStr + ".", "Success", JOptionPane.INFORMATION_MESSAGE);
                 dialog.dispose();
-            } catch (java.time.format.DateTimeParseException ex1) {
-                JOptionPane.showMessageDialog(dialog, "Invalid date format. Please use YYYY-MM-DD.", "Error", JOptionPane.ERROR_MESSAGE);
-            } catch (SQLException ex2) {
-                JOptionPane.showMessageDialog(dialog, "Error applying substitution: " + ex2.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
+            } catch (Exception ex) {
+                JOptionPane.showMessageDialog(dialog, "Error: " + ex.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
             }
         });
 
-        dialog.add(new JLabel());  // Empty for alignment
-        dialog.add(btnLog);
+        // Add button to bottom center
+        gbc.gridx = 0;
+        gbc.gridy++;
+        gbc.gridwidth = 2;
+        gbc.fill = GridBagConstraints.NONE;
+        gbc.anchor = GridBagConstraints.CENTER;
+        gbc.insets = new Insets(20, 8, 8, 8);
+        panel.add(btnApply, gbc);
+
+        dialog.setContentPane(panel);
+        dialog.setResizable(false);
         dialog.setVisible(true);
     }
 
     private void showSubstitutionHistoryDialog() {
         JDialog dialog = new JDialog(this, "Substitution History", true);
-        dialog.setSize(600, 400);
+        dialog.setSize(700, 420);
         dialog.setLocationRelativeTo(this);
 
-        String[] cols = {"Original", "Substitute", "Start Date", "End Date", "Date Applied"};
+        String[] cols = {"Original", "Substitute", "Start", "End", "Applied On"};
         DefaultTableModel model = new DefaultTableModel(cols, 0) {
-            @Override
-            public boolean isCellEditable(int row, int column) {
-                return false;
-            }
+            public boolean isCellEditable(int row, int column) { return false; }
         };
-        JTable table = new JTable(model);
 
-        String sql = "SELECT original_food_id, substitute_food_id, start_date, end_date, date_applied " +
-                "FROM swap_records WHERE user_id = ? ORDER BY date_applied DESC";
+        JTable table = new JTable(model);
+        styleTable(table);
 
         try (Connection con = ConnectionProvider.getCon();
-             PreparedStatement stmt = con.prepareStatement(sql)) {
-            stmt.setInt(1, user.getUserId());
+             PreparedStatement stmt = con.prepareStatement("SELECT original_food_id, substitute_food_id, start_date, end_date, date_applied FROM swap_records WHERE user_id = ? ORDER BY date_applied DESC")) {
 
+            stmt.setInt(1, user.getUserId());
             try (ResultSet rs = stmt.executeQuery()) {
                 while (rs.next()) {
-                    int origId = rs.getInt("original_food_id");
-                    int subId = rs.getInt("substitute_food_id");
-
-                    String origName = "Unknown";
-                    String subName = "Unknown";
-
-                    try {
-                        origName = Substitution.getFoodNameById(origId);
-                    } catch (SQLException e) {
-                        origName = "Unknown (ID: " + origId + ")";
-                    }
-                    try {
-                        subName = Substitution.getFoodNameById(subId);
-                    } catch (SQLException e) {
-                        subName = "Unknown (ID: " + subId + ")";
-                    }
-
-                    java.sql.Date startDate = rs.getDate("start_date");
-                    java.sql.Date endDate = rs.getDate("end_date");
-                    java.sql.Date loggedDate = rs.getDate("date_applied");
-
-                    String from = (startDate != null) ? startDate.toString() : "N/A";
-                    String to = (endDate != null) ? endDate.toString() : "N/A";
-                    String logged = (loggedDate != null) ? loggedDate.toString() : "N/A";
-
-                    model.addRow(new Object[]{origName, subName, from, to, logged});
+                    String orig = Substitution.getFoodNameById(rs.getInt("original_food_id"));
+                    String sub = Substitution.getFoodNameById(rs.getInt("substitute_food_id"));
+                    model.addRow(new Object[]{
+                            orig, sub,
+                            rs.getDate("start_date"),
+                            rs.getDate("end_date"),
+                            rs.getDate("date_applied")
+                    });
                 }
             }
-
         } catch (SQLException ex) {
-            JOptionPane.showMessageDialog(this, "Error loading substitution history: " + ex.getMessage(),
-                    "Database Error", JOptionPane.ERROR_MESSAGE);
+            JOptionPane.showMessageDialog(this, "Failed to load history: " + ex.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
         }
-
-        dialog.add(new JScrollPane(table), BorderLayout.CENTER);
+        dialog.add(new JScrollPane(table));
         dialog.setVisible(true);
     }
 
     private void showSubstitutionStatsDialog() {
         JDialog dialog = new JDialog(this, "Substitution Stats", true);
-        dialog.setSize(600, 400);
+        dialog.setSize(800, 420);
         dialog.setLocationRelativeTo(this);
 
-        String[] cols = {"Original Food", "Substitute Food", "Date Applied", "Calories", "Protein (g)", "Fat (g)", "Carbs (g)"};
+        String[] cols = {"Original", "Substitute", "Applied On", "Calories", "Protein (g)", "Fat (g)", "Carbs (g)"};
         DefaultTableModel model = new DefaultTableModel(cols, 0) {
             public boolean isCellEditable(int row, int col) { return false; }
         };
         JTable table = new JTable(model);
+        styleTable(table);
 
         try {
             List<SubstitutionRecord> records = new Substitution().getSubstitutionHistory(user.getUserId());
-
-            List<Integer> substituteFoodIds = records.stream()
-                    .map(SubstitutionRecord::getSubstituteFoodId)
-                    .distinct()
-                    .collect(Collectors.toList());
-
-            Map<Integer, Map<String, NutrientInfo>> allNutrients = new Substitution().getNutrientDataForFoods(substituteFoodIds);
+            List<Integer> subIds = records.stream().map(SubstitutionRecord::getSubstituteFoodId).distinct().toList();
+            Map<Integer, Map<String, NutrientInfo>> nutrientMap = new Substitution().getNutrientDataForFoods(subIds);
 
             for (SubstitutionRecord r : records) {
-                String origName;
-                String subName;
-                try {
-                    origName = Substitution.getFoodNameById(r.getOriginalFoodId());
-                    subName = Substitution.getFoodNameById(r.getSubstituteFoodId());
-                } catch (SQLException ex) {
-                    origName = "Unknown";
-                    subName = "Unknown";
-                    ex.printStackTrace();
-                }
-
-                Map<String, NutrientInfo> nutrients = allNutrients.getOrDefault(r.getSubstituteFoodId(), Collections.emptyMap());
-
-                float calories = nutrients.getOrDefault("ENERGY (KILOCALORIES)", new NutrientInfo(0f, "")).getValue();
-                float protein = nutrients.getOrDefault("PROTEIN", new NutrientInfo(0f, "")).getValue();
-                float fat = nutrients.getOrDefault("FAT (TOTAL LIPIDS)", new NutrientInfo(0f, "")).getValue();
-                float carbs = nutrients.getOrDefault("CARBOHYDRATE, TOTAL (BY DIFFERENCE)", new NutrientInfo(0f, "")).getValue();
-
+                Map<String, NutrientInfo> nutri = nutrientMap.getOrDefault(r.getSubstituteFoodId(), Collections.emptyMap());
                 model.addRow(new Object[]{
-                        origName, subName, r.getDateApplied().toString(),
-                        calories, protein, fat, carbs
+                        Substitution.getFoodNameById(r.getOriginalFoodId()),
+                        Substitution.getFoodNameById(r.getSubstituteFoodId()),
+                        r.getDateApplied(),
+                        nutri.getOrDefault("ENERGY (KILOCALORIES)", new NutrientInfo(0, "")).getValue(),
+                        nutri.getOrDefault("PROTEIN", new NutrientInfo(0, "")).getValue(),
+                        nutri.getOrDefault("FAT (TOTAL LIPIDS)", new NutrientInfo(0, "")).getValue(),
+                        nutri.getOrDefault("CARBOHYDRATE, TOTAL (BY DIFFERENCE)", new NutrientInfo(0, "")).getValue()
                 });
             }
         } catch (SQLException ex) {
-            JOptionPane.showMessageDialog(dialog, "Error loading substitution stats: " + ex.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
+            JOptionPane.showMessageDialog(dialog, "Error loading stats: " + ex.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
         }
-
-        dialog.add(new JScrollPane(table), BorderLayout.CENTER);
+        dialog.add(new JScrollPane(table));
         dialog.setVisible(true);
     }
+
+    private void styleTable(JTable table) {
+        table.setFont(new Font("Segoe UI", Font.PLAIN, 13));
+        table.setRowHeight(22);
+        table.getTableHeader().setFont(new Font("Segoe UI", Font.BOLD, 13));
+        table.getTableHeader().setBackground(new Color(230, 230, 230));
+        table.setGridColor(new Color(200, 200, 200));
+        table.setShowGrid(true);
+    }
 }
-
-
